--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -66,8 +66,8 @@ semana1_1 %>%
 
 ```{r echo = F}
 semana1_2 <- tibble(Clase = c("Bienvenidos al Tidyverse", "El tidyverse en acción", "Tidyverse olímpico"),
-                  Documento = c("<a href='https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/2-2/Tidyverse_1.html'>Slides</a>", "<a href='https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/2-3/Tidyverse_2.html'>Slides</a>", "<a href='https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp1-tidyverse/tidyverse_TP.html'>Consigna</a> <a href='https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp1-tidyverse/tidyverse_TP_solved.html'>Solución</a>"),
-                  Videos = c( "<a href='https://www.youtube.com/watch?v=l1ow5g2aUhs&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=4'>YouTube</a>", "<a href='https://www.youtube.com/watch?v=MpypVMxu3V8&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=5'>YouTube</a>", "<a href='https://www.youtube.com/watch?v=LJ5JnanfFT4&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=9'>CS2021</a> <a href='https://www.youtube.com/watch?v=n-mw_jn5A6E&list=PL9Cl0jpAAyjyLxsoi_8VM_duU6g0YahvT&index=1'>CS2022</a>"))
+                  Documento = c("<a href='https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/2-2/Tidyverse_1.html'>Slides</a>", "<a href='https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/2-3/Tidyverse_2.html'>Slides</a>", "<a href='https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp1-tidyverse/tidyverse_TP.html'>Consigna</a> <br> <a href='https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp1-tidyverse/tidyverse_TP_solved.html'>Solución</a>"),
+                  Videos = c( "<a href='https://www.youtube.com/watch?v=l1ow5g2aUhs&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=4'>YouTube</a>", "<a href='https://www.youtube.com/watch?v=MpypVMxu3V8&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=5'>YouTube</a>", "<a href='https://www.youtube.com/watch?v=LJ5JnanfFT4&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=9'>CS2021</a> <br> <a href='https://www.youtube.com/watch?v=n-mw_jn5A6E&list=PL9Cl0jpAAyjyLxsoi_8VM_duU6g0YahvT&index=1'>CS2022</a>"))
 
 semana1_2 %>%
   kbl(align = c("l", "c", "c"), escape = FALSE) %>%
@@ -79,8 +79,8 @@ semana1_2 %>%
 
 ```{r echo = F}
 semana1_3 <- tibble(Clase = c("Visualización de datos: A New Hope", "Visualización de datos: Ggplot2 Strikes Back", "Visualización de datos: Return of the Ggplot2", "ggplot2 olímpico"),
-                  Documento = c("<a href='https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/3-1/ggplot_1.html'>Slides</a>", "<a href='https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/3-2/ggplot_2.html'>Slides</a>", "<a href='https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/3-3/ggplot_3.html'>Slides</a>", "<a href='https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp2-ggplot2/ggplot2_TP.html'>Consigna</a> <a href='https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp2-ggplot2/ggplot2_TP_solved.html'>Solución</a>"),
-                  Videos = c( "<a href='https://www.youtube.com/watch?v=LE2QVqLcvE0&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=6'>YouTube</a>", "<a href='https://www.youtube.com/watch?v=TMhZML7JqsM&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=7'>YouTube</a>", "<a href='https://www.youtube.com/watch?v=j0vwd7w_Kok&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=8'>YouTube</a>", "<a href='https://www.youtube.com/watch?v=SSY6diKq3o4&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=10'>CS2021</a> <a href='https://www.youtube.com/watch?v=n-mw_jn5A6E&list=PL9Cl0jpAAyjyLxsoi_8VM_duU6g0YahvT&index=1'>CS2022</a>"))
+                  Documento = c("<a href='https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/3-1/ggplot_1.html'>Slides</a>", "<a href='https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/3-2/ggplot_2.html'>Slides</a>", "<a href='https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/3-3/ggplot_3.html'>Slides</a>", "<a href='https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp2-ggplot2/ggplot2_TP.html'>Consigna</a> <br> <a href='https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp2-ggplot2/ggplot2_TP_solved.html'>Solución</a>"),
+                  Videos = c( "<a href='https://www.youtube.com/watch?v=LE2QVqLcvE0&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=6'>YouTube</a>", "<a href='https://www.youtube.com/watch?v=TMhZML7JqsM&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=7'>YouTube</a>", "<a href='https://www.youtube.com/watch?v=j0vwd7w_Kok&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=8'>YouTube</a>", "<a href='https://www.youtube.com/watch?v=SSY6diKq3o4&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=10'>CS2021</a> <br> <a href='https://www.youtube.com/watch?v=n-mw_jn5A6E&list=PL9Cl0jpAAyjyLxsoi_8VM_duU6g0YahvT&index=1'>CS2022</a>"))
 
 semana1_3 %>%
   kbl(align = c("l", "c", "c"), escape = FALSE) %>%
@@ -92,23 +92,29 @@ semana1_3 %>%
 
 * **Semana 2 (4/7 al 8/7):** Revisando conceptos de probabilidad y estadística: Aleatoriedad y Distribuciones estadísticas `r ji("dice")`.
 
-| Clase                 | Documento             | Vídeo                 |
-| --------------------- | --------------------- | --------------------- |
-| Variables Aleatorias 1: ¿Qué es una variable aleatoria?            | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/4/1-Que_es_una_variable_aleatoria.pdf) | [YouTube](https://www.youtube.com/watch?v=x6JxeKelBdc&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=11) |
-| Variables Aleatorias 2: Tipos de variables aleatorias       | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/4/2-Tipos_de_variables_aleatorias.pdf) | [YouTube](https://www.youtube.com/watch?v=Q6w_iehCLFs&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=12) |
-| Variables Aleatorias 3: ¿Cómo se mide una variable aleatoria?               | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/4/3-Como_se_mide_una_variable_aleatoria.pdf) | [YouTube](https://www.youtube.com/watch?v=yhYqr_cHoaQ&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=13) |
-| Variables Aleatorias 4-1: Distribución binomial     | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/4/4-Distribuciones_estadisticas.pdf) | [YouTube](https://www.youtube.com/watch?v=ec-HextxRJ8&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=14) |
-| Variables Aleatorias 4-2: Distribución uniforme                            | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/4/4-Distribuciones_estadisticas.pdf) | [YouTube](https://www.youtube.com/watch?v=7dfvFh-Gdaw&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=15) |
-| Variables Aleatorias 4-3: La distribución Gaussiana (o normal)              | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/4/4-Distribuciones_estadisticas.pdf) | [YouTube](https://www.youtube.com/watch?v=UdunP_Epfec&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=16) |
-| Variables discretas y continuas | [Discretas](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp3-variables_discretas/variables_discretas.html) [Continuas](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp3-variables_discretas/variables_continuas.html) | [(CS-2021)](https://www.youtube.com/watch?v=CFOAxG78H3A&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=17) [(CS-2022)](https://www.youtube.com/watch?v=lnr-VDg_JQs&list=PL9Cl0jpAAyjyLxsoi_8VM_duU6g0YahvT&index=2) |
+```{r echo = F}
+semana2 <- tibble(Clase = c("Variables Aleatorias 1: ¿Qué es una variable aleatoria?", "Variables Aleatorias 2: Tipos de variables aleatorias", "Variables Aleatorias 3: ¿Cómo se mide una variable aleatoria?", "Variables Aleatorias 4-1: Distribución binomial", "Variables Aleatorias 4-2: Distribución uniforme", "Variables Aleatorias 4-3: La distribución Gaussiana (o normal)", "Variables discretas y continuas"),
+                  Documento = c("<a href='https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/4/1-Que_es_una_variable_aleatoria.pdf'>Slides</a>", "<a href='https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/4/2-Tipos_de_variables_aleatorias.pdf'>Slides</a>", "<a href='https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/4/3-Como_se_mide_una_variable_aleatoria.pdf'>Slides</a>", "<a href='https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/4/4-Distribuciones_estadisticas.pdf'>Slides</a>", "<a href='https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/4/4-Distribuciones_estadisticas.pdf'>Slides</a>", "<a href='https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/4/4-Distribuciones_estadisticas.pdf'>Slides</a>", "<a href='https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp3-variables_discretas/variables_discretas.html'>Discretas</a> <br> <a href='https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp3-variables_discretas/variables_discretas.html'>Continuas</a>"),
+                  Videos = c( "<a https://www.youtube.com/watch?v=x6JxeKelBdc'>YouTube</a>", "<a href='https://www.youtube.com/watch?v=Q6w_iehCLFs'>YouTube</a>", "<a https://www.youtube.com/watch?v=yhYqr_cHoaQ'>YouTube</a>", "<a href=https://www.youtube.com/watch?v=ec-HextxRJ8'>YouTube</a>", "<a href='https://www.youtube.com/watch?v=7dfvFh-Gdaw'>YouTube</a>", "<a href='https://www.youtube.com/watch?v=UdunP_Epfec'>YouTube</a>", "<a href='https://youtu.be/w-9xmWBb_R4?t=6318'>CS2021</a> <br> <a href='https://www.youtube.com/watch?v=lnr-VDg_JQs'>CS2022-1</a> <br> <a href='https://www.youtube.com/watch?v=Ne5M0YIx2xQ'>CS2022-2</a> <br> <a href='https://www.youtube.com/watch?v=so9ak-TMbos'>CS2022-3</a> <br> <a href='https://www.youtube.com/watch?v=l6jjTDITKJM'>CS2022-4</a> <br> <a href='https://www.youtube.com/watch?v=1hrErSdZxX8'>CS2022-5</a>"))
+
+semana2 %>%
+  kbl(align = c("l", "c", "c"), escape = FALSE) %>%
+  kable_material(c("striped", "hover"), html_font = "Roboto") %>%
+  column_spec(2:3, bold = T)
+```
 
 * **Semana 3 (11/7 al 15/7):** Análisis exploratorio de datos `r ji("thinking")`.
 
-| Clase                 | Documento             | Vídeo                 |
-| --------------------- | --------------------- | --------------------- |
-| Exploración de datos                           | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/7-1/EDA_1.html) | [YouTube](https://www.youtube.com/watch?v=oPfr0X0qGG4&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=18) |
-| Cómo detectar outliers y qué hacer con ellos              | [Slides](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/7-2/EDA_2.html) | [YouTube](https://www.youtube.com/watch?v=gwMIpYw_J5A&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=19) |
-| Análisis exploratorio de datos | [Consigna](https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp4-EDA/EDA_TP.html) | [(CS-2021)](https://www.youtube.com/watch?v=w-9xmWBb_R4&list=PL9Cl0jpAAyjw3OtpK8omF19AJeUrmSF-f&index=24) |
+```{r echo = F}
+semana3 <- tibble(Clase = c("Exploración de datos", "Cómo detectar outliers y qué hacer con ellos", "Análisis exploratorio de datos"),
+                  Documento = c("<a href='https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/7-1/EDA_1.html'>Slides</a>", "<a href='https://spiousas.github.io/Inferencia_con_R_UNQ2022/Presentaciones/7-2/EDA_2.html'>Slides</a>", "<a href='https://spiousas.github.io/Inferencia_con_R_UNQ2022/Practicos/tp4-EDA/EDA_TP.html'>Consigna</a>"),
+                  Videos = c( "<a https://www.youtube.com/watch?v=oPfr0X0qGG4'>YouTube</a>", "<a href='https://www.youtube.com/watch?v=gwMIpYw_J5A'>YouTube</a>", "<a https://www.youtube.com/watch?v=w-9xmWBb_R4'>CS2021</a>"))
+
+semana3 %>%
+  kbl(align = c("l", "c", "c"), escape = FALSE) %>%
+  kable_material(c("striped", "hover"), html_font = "Roboto") %>%
+  column_spec(2:3, bold = T)
+```
 
 <style>
 div.blue { background-color:#e6f0ff; border-radius: 5px; padding: 5px;}
